Fixed bug with alphabetical ordering and spacinga dded to related legislation

--- a/web/themes/custom/liibarrio2020/scss/components/_block.scss
+++ b/web/themes/custom/liibarrio2020/scss/components/_block.scss
@@ -1888,3 +1888,11 @@ ul.pagination {
     }
   }
 }
+
+/*Legislation*/
+
+.view-related-content{
+  .views-row{
+    padding-bottom:.5rem;
+  }
+}
